feat(gates): implement gate control and scanning
Make the /knk gate command actually functional in-game, fix the
gate animation/damage runtime, and add a headless WorldTask handler
that scans a gate's blocks into snapshots without needing a player.

The gate command, animation loop, and health system existed in code
but were never wired into plugin startup, so /gate commands did
nothing and animations never ran. Gate snapshots also had no
production mechanism and the read-path DTO silently mismatched the
real API contract, discarding scanned block data.

Changes:
- Route gate control through /knk gate (open/close/info/list/admin),
  resolve targets by id or multi-word name, and add persisted
  active/invincible toggles via the new operational-settings API
- Register GateCommand, GateEventListener, and a per-world
  GateAnimationTask during plugin startup; fix frame rendering to
  move blocks between frames instead of only removing them
- Make gate reload resilient: a failed API refresh no longer wipes
  the existing in-memory cache
- Add animation completion feedback to the command sender and
  detailed [GateAnimation] lifecycle logging
- Fix GateBlockSnapshotDto to match the real API contract
  (materialName/blockDataJson/worldX-Z instead of the stale
  minecraftBlockRefId/blockData fields), so scanned block data is no
  longer silently discarded on load
- Add IHeadlessWorldTaskHandler, HeadlessWorldTaskPoller, and
  GateBlockScanTaskHandler: polls Pending WorldTasks, skips the
  claim phase, and scans PLANE_GRID gates (including DOUBLE_DOORS
  dual-wing scans) in ticked batches to avoid server lag;
  FLOOD_FILL geometry fails explicitly with a clear message pending
  a future BFS implementation

Related: docs/specs/gate-structure/GATE_STRUCTURE_IMPLEMENTATION_ROADMAP.md,
docs/specs/gate-structure/REQUIREMENTS_GATE_ADVANCED_FEATURES.md